--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
         tokenClient: null, isGapiLoaded: false, isLoggedIn: false, userProfile: null,
         init() {
             const googleConfigWarning = '<strong>Configuration Required:</strong> Please update the <code>GOOGLE_CLIENT_ID</code> in the script to enable Google Sign-In.';
-            if (GOOGLE_CLIENT_ID === 'YOUR_CLIENT_ID.apps.googleusercontent.com') {
+            if (GOOGLE_CLIENT_ID === '434910578368-6ura496r68hb9onic2osm71c9es9ap8p.apps.googleusercontent.com') {
                 document.getElementById('configWarning').innerHTML = googleConfigWarning;
                 document.getElementById('configWarning').classList.remove('hidden');
                 document.querySelector('#authSection').innerHTML = `<button class="inline-flex items-center justify-center gap-2 px-4 py-2 font-semibold text-white bg-gray-400 rounded-lg shadow-md cursor-not-allowed" disabled>Setup Required</button>`;
